PROJECT(usart)

CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
ENABLE_LANGUAGE(ASM)

FIND_PACKAGE(CMSIS REQUIRED)
FIND_PACKAGE(StdPeriphLib REQUIRED)

INCLUDE_DIRECTORIES(
    ${CMAKE_CURRENT_SOURCE_DIR}
    ${CMSIS_INCLUDE_DIR}
    ${StdPeriphLib_INCLUDE_DIR}
)

SET(PROJECT_SOURCES
    main.c
    common_lib/utils.c
    common_lib/interrupts.c
    common_lib/usart.c
    common_lib/printf.c
)

SET(STM32_LINKER_SCRIPT ${CMSIS_LINKER_SCRIPT})

set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g")

ADD_EXECUTABLE(${CMAKE_PROJECT_NAME} ${PROJECT_SOURCES} ${CMSIS_STARTUP_SOURCE} ${CMSIS_SOURCES} ${StdPeriphLib_SOURCES})

STM32_SET_TARGET_PROPERTIES(${CMAKE_PROJECT_NAME})
#STM32_SET_HSE_VALUE(${CMAKE_PROJECT_NAME} 12000000)
STM32_ADD_HEX_BIN_TARGETS(${CMAKE_PROJECT_NAME})
